sherpa-onnx/c-api/c-api.h

/** @brief Streaming decoding state for one utterance or stream. */
typedef struct SherpaOnnxOnlineStream SherpaOnnxOnlineStream;
/**
 * @brief Destroy a streaming ASR state object.
 *
 * @param stream A pointer returned by SherpaOnnxCreateOnlineStream() or
 *               SherpaOnnxCreateOnlineStreamWithHotwords().
 *
 * @code
 * SherpaOnnxDestroyOnlineStream(stream);
 * stream = NULL;
 * @endcode
 * @see SherpaOnnxCreateOnlineStream
 */
SHERPA_ONNX_API void SherpaOnnxDestroyOnlineStream(
    const SherpaOnnxOnlineStream *stream);
/**
 * @brief Append audio samples to a streaming ASR stream.
 *
 * The input is mono floating-point PCM normalized to the range [-1, 1].
 * If @p sample_rate differs from the recognizer feature sample rate,
 * sherpa-onnx resamples internally.
 *
 * @param stream A pointer returned by SherpaOnnxCreateOnlineStream().
 * @param sample_rate Sample rate of @p samples.
 * @param samples Pointer to @p n samples in the range [-1, 1].
 * @param n Number of samples.
 *
 * @code
 * int32_t start = 0;
 * int32_t chunk_size = 3200;  // 0.2 seconds at 16 kHz
 * SherpaOnnxOnlineStreamAcceptWaveform(stream, wave->sample_rate,
 *                                      wave->samples + start, chunk_size);
 * @endcode
 * @see SherpaOnnxCreateOnlineStream, SherpaOnnxDecodeOnlineStream
 */
SHERPA_ONNX_API void SherpaOnnxOnlineStreamAcceptWaveform(
    const SherpaOnnxOnlineStream *stream, int32_t sample_rate,
    const float *samples, int32_t n);
/**
 * @brief Signal end-of-input for a streaming ASR stream.
 *
 * After calling this function, do not append more samples to the stream.
 *
 * @param stream A pointer returned by SherpaOnnxCreateOnlineStream().
 *
 * @code
 * SherpaOnnxOnlineStreamInputFinished(stream);
 * @endcode
 */
SHERPA_ONNX_API void SherpaOnnxOnlineStreamInputFinished(
    const SherpaOnnxOnlineStream *stream);
/**
 * @brief Write floating-point PCM to a mono 16-bit WAVE file.
 *
 * @param samples Pointer to @p n samples in the range [-1, 1].
 * @param n Number of samples.
 * @param sample_rate Sample rate in Hz.
 * @param filename Output filename.
 * @return 1 on success; 0 on failure.
 *
 * @code
 * SherpaOnnxWriteWave(audio->samples, audio->n, audio->sample_rate,
 *                     "./generated-kokoro-en.wav");
 * @endcode
 * @see SherpaOnnxReadWave
 */
SHERPA_ONNX_API int32_t SherpaOnnxWriteWave(const float *samples, int32_t n,
                                            int32_t sample_rate,
                                            const char *filename);
/**
 * @brief Decoded mono WAVE file content.
 *
 * Free this object with SherpaOnnxFreeWave().
 * @see SherpaOnnxReadWave, SherpaOnnxFreeWave
 */
typedef struct SherpaOnnxWave {
  /** Samples normalized to the range [-1, 1]. */
  const float *samples;
  /** Sample rate in Hz. */
  int32_t sample_rate;
  /** Number of samples. */
  int32_t num_samples;
} SherpaOnnxWave;
/**
 * @brief Read a mono 16-bit PCM WAVE file.
 *
 * @param filename Input WAVE filename.
 * @return A newly allocated wave object, or NULL on error. Free it with
 *         SherpaOnnxFreeWave().
 *
 * @code
 * const SherpaOnnxWave *wave = SherpaOnnxReadWave("./Obama.wav");
 * if (wave) {
 *   printf("sample_rate=%d, num_samples=%d\n",
 *          wave->sample_rate, wave->num_samples);
 *   SherpaOnnxFreeWave(wave);
 * }
 * @endcode
 * @see SherpaOnnxFreeWave, SherpaOnnxWave
 */
SHERPA_ONNX_API const SherpaOnnxWave *SherpaOnnxReadWave(const char *filename);
/**
 * @brief Destroy a wave object returned by SherpaOnnxReadWave() or
 * SherpaOnnxReadWaveFromBinaryData().
 * @see SherpaOnnxReadWave
 */
SHERPA_ONNX_API void SherpaOnnxFreeWave(const SherpaOnnxWave *wave);
/** @brief Opaque speaker embedding extractor handle. */
typedef struct SherpaOnnxSpeakerEmbeddingExtractor
    SherpaOnnxSpeakerEmbeddingExtractor;
/**
 * @brief Create a streaming feature buffer for embedding extraction.
 *
 * Feed samples with SherpaOnnxOnlineStreamAcceptWaveform(), then call
 * SherpaOnnxSpeakerEmbeddingExtractorIsReady() and
 * SherpaOnnxSpeakerEmbeddingExtractorComputeEmbedding().
 *
 * @param p A pointer returned by SherpaOnnxCreateSpeakerEmbeddingExtractor().
 * @return A newly allocated online stream. Free it with
 *         SherpaOnnxDestroyOnlineStream().
 */
SHERPA_ONNX_API const SherpaOnnxOnlineStream *
SherpaOnnxSpeakerEmbeddingExtractorCreateStream(
    const SherpaOnnxSpeakerEmbeddingExtractor *p);
/**
 * @brief Check whether enough audio has been provided to compute an embedding.
 *
 * @param p A pointer returned by SherpaOnnxCreateSpeakerEmbeddingExtractor().
 * @param s A pointer returned by
 * SherpaOnnxSpeakerEmbeddingExtractorCreateStream().
 * @return 1 if the stream is ready; otherwise 0.
 */
SHERPA_ONNX_API int32_t SherpaOnnxSpeakerEmbeddingExtractorIsReady(
    const SherpaOnnxSpeakerEmbeddingExtractor *p,
    const SherpaOnnxOnlineStream *s);
/**
 * @brief Compute the embedding for a stream.
 *
 * The returned vector has `SherpaOnnxSpeakerEmbeddingExtractorDim(p)` elements.
 * Free it with SherpaOnnxSpeakerEmbeddingExtractorDestroyEmbedding().
 *
 * @param p A pointer returned by SherpaOnnxCreateSpeakerEmbeddingExtractor().
 * @param s A pointer returned by
 * SherpaOnnxSpeakerEmbeddingExtractorCreateStream().
 * @return A newly allocated embedding vector.
 *
 * @code
 * const SherpaOnnxOnlineStream *stream =
 *     SherpaOnnxSpeakerEmbeddingExtractorCreateStream(ex);
 * SherpaOnnxOnlineStreamAcceptWaveform(stream, wave->sample_rate,
 * wave->samples, wave->num_samples);
 * SherpaOnnxOnlineStreamInputFinished(stream);
 * if (SherpaOnnxSpeakerEmbeddingExtractorIsReady(ex, stream)) {
 *   const float *v =
 *       SherpaOnnxSpeakerEmbeddingExtractorComputeEmbedding(ex, stream);
 *   SherpaOnnxSpeakerEmbeddingExtractorDestroyEmbedding(v);
 * }
 * SherpaOnnxDestroyOnlineStream(stream);
 * @endcode
 */
SHERPA_ONNX_API const float *
SherpaOnnxSpeakerEmbeddingExtractorComputeEmbedding(
    const SherpaOnnxSpeakerEmbeddingExtractor *p,
    const SherpaOnnxOnlineStream *s);
/**
 * @brief Destroy an embedding vector returned by
 * SherpaOnnxSpeakerEmbeddingExtractorComputeEmbedding().
 *
 * @param v A pointer returned by
 *          SherpaOnnxSpeakerEmbeddingExtractorComputeEmbedding().
 */
SHERPA_ONNX_API void SherpaOnnxSpeakerEmbeddingExtractorDestroyEmbedding(
    const float *v);
/**
 * @brief Opaque speaker embedding manager handle.
 *
 * @see SherpaOnnxCreateSpeakerEmbeddingManager
 */
typedef struct SherpaOnnxSpeakerEmbeddingManager
    SherpaOnnxSpeakerEmbeddingManager;
/**
 * @brief Create a speaker embedding manager.
 *
 * The manager stores enrolled speaker embeddings and supports speaker search
 * and verification.
 *
 * @param dim Embedding dimension. This should match
 *            SherpaOnnxSpeakerEmbeddingExtractorDim().
 * @return A newly allocated manager. Free it with
 *         SherpaOnnxDestroySpeakerEmbeddingManager().
 * @see SherpaOnnxDestroySpeakerEmbeddingManager
 */
SHERPA_ONNX_API const SherpaOnnxSpeakerEmbeddingManager *
SherpaOnnxCreateSpeakerEmbeddingManager(int32_t dim);
/**
 * @brief Destroy a speaker embedding manager.
 *
 * @param p A pointer returned by SherpaOnnxCreateSpeakerEmbeddingManager().
 * @see SherpaOnnxCreateSpeakerEmbeddingManager
 */
SHERPA_ONNX_API void SherpaOnnxDestroySpeakerEmbeddingManager(
    const SherpaOnnxSpeakerEmbeddingManager *p);
/**
 * @brief Add one enrollment embedding for a speaker.
 *
 * @param p A pointer returned by SherpaOnnxCreateSpeakerEmbeddingManager().
 * @param name Speaker name.
 * @param v Embedding vector with exactly `dim` elements.
 * @return 1 on success; 0 on error.
 */
SHERPA_ONNX_API int32_t
SherpaOnnxSpeakerEmbeddingManagerAdd(const SherpaOnnxSpeakerEmbeddingManager *p,
                                     const char *name, const float *v);
/**
 * @brief Add multiple enrollment embeddings packed in one flat array.
 *
 * The input contains @p n embeddings laid out consecutively, so the total
 * array length must be `n * dim`.
 *
 * @param p A pointer returned by SherpaOnnxCreateSpeakerEmbeddingManager().
 * @param name Speaker name.
 * @param v Flattened embedding array.
 * @param n Number of embeddings in @p v.
 * @return 1 on success; 0 on error.
 */
SHERPA_ONNX_API int32_t SherpaOnnxSpeakerEmbeddingManagerAddListFlattened(
    const SherpaOnnxSpeakerEmbeddingManager *p, const char *name,
    const float *v, int32_t n);
/**
 * @brief Remove a speaker from the manager.
 *
 * @param p A pointer returned by SherpaOnnxCreateSpeakerEmbeddingManager().
 * @param name Speaker name to remove.
 * @return 1 if removed; otherwise 0. Returns 0 if the speaker does not exist.
 */
SHERPA_ONNX_API int32_t SherpaOnnxSpeakerEmbeddingManagerRemove(
    const SherpaOnnxSpeakerEmbeddingManager *p, const char *name);
/**
 * @brief Search for the best matching enrolled speaker.
 *
 * @param p A pointer returned by SherpaOnnxCreateSpeakerEmbeddingManager().
 * @param v Query embedding vector.
 * @param threshold Minimum similarity threshold in the range [0, 1].
 * @return A newly allocated speaker name on match, or NULL if no speaker
 *         passes the threshold. Free the returned name with
 *         SherpaOnnxSpeakerEmbeddingManagerFreeSearch().
 */
SHERPA_ONNX_API const char *SherpaOnnxSpeakerEmbeddingManagerSearch(
    const SherpaOnnxSpeakerEmbeddingManager *p, const float *v,
    float threshold);
/**
 * @brief Free a string returned by SherpaOnnxSpeakerEmbeddingManagerSearch().
 *
 * @param name A pointer returned by
 *             SherpaOnnxSpeakerEmbeddingManagerSearch().
 */
SHERPA_ONNX_API void SherpaOnnxSpeakerEmbeddingManagerFreeSearch(
    const char *name);
/**
 * @brief Verify whether a query embedding matches a named speaker.
 *
 * @param p A pointer returned by SherpaOnnxCreateSpeakerEmbeddingManager().
 * @param name Speaker name to compare against.
 * @param v Query embedding vector.
 * @param threshold Minimum similarity threshold in the range [0, 1].
 * @return 1 if the speaker matches; otherwise 0.
 */
SHERPA_ONNX_API int32_t SherpaOnnxSpeakerEmbeddingManagerVerify(
    const SherpaOnnxSpeakerEmbeddingManager *p, const char *name,
    const float *v, float threshold);
/**
 * @brief Check whether a speaker is enrolled.
 *
 * @param p A pointer returned by SherpaOnnxCreateSpeakerEmbeddingManager().
 * @param name Speaker name.
 * @return 1 if the speaker exists; otherwise 0.
 */
SHERPA_ONNX_API int32_t SherpaOnnxSpeakerEmbeddingManagerContains(
    const SherpaOnnxSpeakerEmbeddingManager *p, const char *name);
/**
 * @brief Return the number of enrolled speakers.
 *
 * @param p A pointer returned by SherpaOnnxCreateSpeakerEmbeddingManager().
 * @return Number of enrolled speakers.
 */
SHERPA_ONNX_API int32_t SherpaOnnxSpeakerEmbeddingManagerNumSpeakers(
    const SherpaOnnxSpeakerEmbeddingManager *p);
/**
 * @brief Return all enrolled speaker names.
 *
 * The returned array is NULL-terminated. If no speakers are enrolled, the
 * returned array still exists and its first element is NULL.
 *
 * @param p A pointer returned by SherpaOnnxCreateSpeakerEmbeddingManager().
 * @return A newly allocated NULL-terminated array of speaker names. Free it
 *         with SherpaOnnxSpeakerEmbeddingManagerFreeAllSpeakers().
 */
SHERPA_ONNX_API const char *const *
SherpaOnnxSpeakerEmbeddingManagerGetAllSpeakers(
    const SherpaOnnxSpeakerEmbeddingManager *p);
/**
 * @brief Free an array returned by
 * SherpaOnnxSpeakerEmbeddingManagerGetAllSpeakers().
 *
 * @param names A pointer returned by
 * SherpaOnnxSpeakerEmbeddingManagerGetAllSpeakers().
 */
SHERPA_ONNX_API void SherpaOnnxSpeakerEmbeddingManagerFreeAllSpeakers(
    const char *const *names);